# mysql-processor

./: .dockerignore  .gitignore  .rules  .voidrules  Dockerfile  MIGRATION.md  README.md  build.sh  config.ini.sample  dump.py  export.sh  install-pv.sh  install_mydumper.sh  main.py  pyproject.toml  run.py  tables.py  test.py  test_mydumper.py  watch_dumps_live.sh
.github/workflows/: README.md  docker-build.yml
k8s/: Deployment.yaml  Job.yaml  PersistentVolumeClaim.yaml  README.md  app.yaml  config.yaml  cronjob.yaml  deployment.yaml  job.yaml  pod.yaml  run-backup.sh
src/: base.py  dump.py  import_.py  logger_config.py  main.py  monitor.py  mydumper.py  mydumper_downloader.py  myloader.py  mysql_downloader.py  restore.py  web_server.py
src/templates/: index.html
temp/: control.tar.xz  data.tar.xz  mydumper_0.19.3-3.noble_arm64.deb
tests/: test_basic.py
